Added brief landing page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Untitled</title>
+  <title>Problem set 2</title>
 </head>
 <body>
+
+	<h2>See main.js and console</h2>
 	
   <script src="main.js"></script>
 
